--- a/src/components/navigation/media.scss
+++ b/src/components/navigation/media.scss
@@ -2,12 +2,10 @@
 
 
 @include media('zerro','md-tablet'){
-  .navigation {
-    &__items{
+    .items{
       display:none;
     }
-    &__bar{
+    .bar{
       text-align:right;
     }
-  }
 }
