--- a/src/components/navigation/mobilemenu/mobilemenu.scss
+++ b/src/components/navigation/mobilemenu/mobilemenu.scss
@@ -1,3 +1,22 @@
+@keyframes anim {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: 100px;
+  }
+}
+@keyframes reverse-anim {
+  from {
+    height: 100px;
+  }
+
+  to {
+    height: 0;
+  }
+}
+
 .mobilemenu {
   font-size: 16px;
   position: relative;
@@ -11,41 +30,31 @@
   transition: all 0.1s ease-in-out;
   overflow: hidden;
   will-change: height;
-  @keyframes anim {
-    from {
-      height: 0;
-    }
-    to {
-      height: 100px;
-    }
-  }
-  @keyframes reverse-anim {
-    from {
-      height: 100px;
-    }
-    to {
-      height: 0;
-    }
-  }
+}
 
-  &.show {
-    display: block;
-    animation-name: anim;
-    animation-delay: 0.1s;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-  }
+.show {
+  display: block;
+  animation-name: anim;
+  animation-delay: 0.1s;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
 
-  &.hide {
-    display: block;
-    animation-name: reverse-anim;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-  }
+.hide {
+  display: block;
+  animation-name: reverse-anim;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
 
-  &__item {
-    width: 100%;
-    display: inline-block;
-    text-align: left;
+.item {
+  width: 100%;
+  display: inline-block;
+  text-align: left;
+}
+
+@include media('md-tablet','lg-pc'){
+  .mobilemenu{
+    display:none !important;
   }
 }
