--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -14,8 +14,9 @@ $max-width: 900px;
   height: 400px;
   height: 35vw;
   max-height: 600px;
+}
 
-  &__button {
+  .button {
     display: inline-block;
     width: 12px;
     height: 12px;
@@ -34,7 +35,7 @@ $max-width: 900px;
     }
   }
 
-  &__slide {
+  .slide {
     width: 100%;
     height: 100%;
     text-align: center;
@@ -61,7 +62,7 @@ $max-width: 900px;
     }
   }
 
-  &__control {
+  .control {
     position: relative;
     z-index: 2;
     text-align: center;
@@ -70,5 +71,5 @@ $max-width: 900px;
       margin:0 5px;
     }
   }
-}
+
 @import './media.scss';
