--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -8,42 +8,46 @@
   margin: 0 auto;
 }
 
-  .content {
-    min-height: 30px;
-    width: 80%;
-    margin: 0 auto;
-  }
+.content {
+  min-height: 30px;
+  width: 80%;
+  margin: 0 auto;
+}
 
-  .logo {
-    width: 40%;
-    float: left;
-    border: 2px solid white;
-    color: white;
-    min-height: 30px;
-  }
+.logo {
+  width: 40%;
+  float: left;
+  border: 2px solid white;
+  color: white;
+  min-height: 30px;
+}
 
-  .bar {
-    width: 60%;
-    float: left;
-    font-size: 0;
-    display: table;
-    min-height: 30px;
-    border: 2px solid white;
-      color: white;
-  }
+.bar {
+  width: 60%;
+  float: left;
+  font-size: 0;
+  display: table;
+  min-height: 30px;
+  border: 2px solid white;
+  color: white;
+}
 
-  .items {
-    display: table-cell;
-    vertical-align: middle;
-  }
+.items {
+  display: table-cell;
+  vertical-align: middle;
+}
+.sub,.subitem{
+  display:none;
+}
 
-  .item {
-    float: left;
-    width: 16.6666%;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    border:1px solid white;
-  }
+.item, .subitem[deep='0'] {
+  float: left;
+  width: 16.6666%;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  border: 1px solid white;
+  display:block;
+}
 
 @import './media.scss';
