--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -36,11 +36,26 @@
   display: table-cell;
   vertical-align: middle;
 }
-.sub,.subitem{
+.sub,.container{
   display:none;
 }
 
-.item, .subitem[deep='0'] {
+.container[deep='0']{
+  &:hover{
+    outline:2px solid purple;
+    &>.sub{
+      display:block;
+      position:absolute;
+      width:100%;
+      .item{
+        display:block;
+        float:none;
+      }
+    }
+  }
+}
+
+.item, .container[deep='0'] {
   float: left;
   width: 16.6666%;
   text-align: center;
