--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -7,62 +7,23 @@
   font-size: 0;
   margin: 0 auto;
 }
-
 .content {
   min-height: 30px;
   width: 80%;
   margin: 0 auto;
-}
-
-.logo {
-  width: 40%;
-  float: left;
-  border: 2px solid white;
-  color: white;
-  min-height: 30px;
+  @include clearfix;
 }
 
 .bar {
   width: 60%;
   float: left;
   font-size: 0;
-  display: table;
   min-height: 30px;
   border: 2px solid white;
   color: white;
 }
 
-.items {
-  display: table-cell;
-  vertical-align: middle;
-}
-.sub,.container{
-  display:none;
-}
 
-.container[deep='0']{
-  &:hover{
-    outline:2px solid purple;
-    &>.sub{
-      display:block;
-      position:absolute;
-      width:100%;
-      .item{
-        display:block;
-        float:none;
-      }
-    }
-  }
-}
 
-.item, .container[deep='0'] {
-  float: left;
-  width: 16.6666%;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 400;
-  border: 1px solid white;
-  display:block;
-}
 
 @import './media.scss';
