--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -18,3 +18,11 @@ $breakpoints:(
     @content;
   }
 }
+@mixin clearfix {
+  clear: both;
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
