--- a/src/components/navigation/hamburger/hamburger.scss
+++ b/src/components/navigation/hamburger/hamburger.scss
@@ -1,10 +1,18 @@
-
+.wrapper{
+    display:none;
+}
+.height-fix{
+  @include navigation-height-fix;
+  float: left;
+}
 .hamburger {
   width: 30px;
   position: relative;
   list-style-type: none;
   transition: transform 0.5s ease;
-  display:none;
+
+  padding:15px 0;
+
 
   li {
     width: 100%;
@@ -62,7 +70,7 @@
   }
 }
 @include media('zerro','md-tablet'){
-  .hamburger{
+  .wrapper{
     display:inline-block;
   }
 }
