--- a/src/components/navigation/logo/logo.scss
+++ b/src/components/navigation/logo/logo.scss
@@ -2,6 +2,13 @@
   width: 40%;
   float: left;
   border: 2px solid white;
-  color: white;
-  min-height: 30px;
+  color: transparent;
+@include navigation-height-fix;
+
+  img{
+    float:left;
+  }
+}
+.point{
+
 }
