--- a/src/components/navigation/menu/menuitems.scss
+++ b/src/components/navigation/menu/menuitems.scss
@@ -1,12 +1,10 @@
-
-
-
-
 .items {
   @include clearfix;
-  &.pc {
-
+  .link{
+  @include linkReset(black);
   }
+
+  &.pc {}
 
   &.mobile {
     font-size: 16px;
@@ -64,7 +62,6 @@
       width: 100%;
       display: inline-block;
       text-align: left;
-
     }
   }
 }
@@ -79,39 +76,62 @@
 
   &:hover {
     outline: 2px solid purple;
-
-
     & > .sub {
       display: block;
       position: absolute;
       width: 200%;
       top: 100%;
       left: -50%;
-      &[deep='1']{
-        background-color:white;
+      &[deep]{
+        position:absolute;
       }
-      $nested:'#FFFFFF','#0A4958','#F6E7D2';
+
+      &[deep='1'] {
+        background-color: white;
+        position: absolute;
+        top:100%;
+
+        &:after {
+          content: '';
+          position: absolute;
+          left: 50%;
+          top: -10px;
+          transform:translateX(-5px);
+          width: 0;
+          height: 0;
+          border-left: 10px solid transparent;
+          border-right: 10px solid transparent;
+          border-bottom: 10px solid #e8e8e8;
+        }
+      }
+      $nested: '#FFFFFF','#0A4958','#F6E7D2';
       @for $i from 2 through 3 {
         .sub[deep='#{$i}'] {
-          left: 100%;
+          left: -100%;
+          transform:translateX(-10px);
           top: -15px;
-          width:100%;
-          background-color:unquote(nth($nested,$i));
-          padding:15px 0;
+          width: 100%;
+          &:after{
+            content:'';
+            width:10px;
+            border:1px solid red;
+            right:-10px;
+            height:100%;
+            top:0;
+            position:absolute;
+          }
+          background-color: unquote(nth($nested,$i));
+          padding: 15px 0;
         }
       }
       .item {
         display: block;
         float: none;
         width: 100%;
-        color:black;
+
       }
     }
   }
-}
-
-.container[deep='0'] {
-
 }
 
 .container[deep='0'],
@@ -119,12 +139,9 @@
   float: left;
   width: 16.6666%;
   text-align: center;
-  font-size: 20px;
-  font-weight: 400;
   display: block;
-  line-height:25px;
+  @include navigation-height-fix;
 }
-
 @include media('zerro','md-tablet'){
   .items {
     &.pc {
