--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -12,15 +12,16 @@
   width: 80%;
   margin: 0 auto;
   @include clearfix;
+  max-width:1200px;
 }
 
 .bar {
   width: 60%;
   float: left;
   font-size: 0;
-  min-height: 30px;
   border: 2px solid white;
   color: white;
+
 }
 
 
