--- a/src/components/navigation/menu/menuitems.scss
+++ b/src/components/navigation/menu/menuitems.scss
@@ -1,9 +1,34 @@
+$nested: '#F8B195','#F67280','#C06C84','#6C5B7B','#355C7D' !global;
+.red{
+  color:red;
+}
+
+@keyframes anim {
+  from {
+    max-height: 0;
+    height: auto;
+  }
+
+  to {
+    max-height: 4000px;
+    height: auto;
+  }
+}
+@keyframes reverse-anim {
+  from {
+    max-height: 900px;
+    height: auto;
+  }
+  to {
+    max-height: 0;
+    height: auto;
+  }
+}
+
 .items {
   @include clearfix;
 
-  .link {
-    @include linkReset(black);
-  }
+
 
   &.pc {
     .container {
@@ -12,22 +37,29 @@
       &:hover {
         outline: 2px solid purple;
 
-        & > .sub{
+        & > .sub {
           display: block;
           position: absolute;
           width: 200%;
           top: 100%;
           left: -50%;
+          @include linkReset{
+            color:black;
+            text-decoration:none;
+          };
 
-
-    /*
+          &[deep] {
+            position: absolute;
+          }
+          /*
     first nested menu have special style
      */
           &[deep='1'] {
-            background-color: white;
+            background-color:unquote(nth($nested,1));
             position: absolute;
             top: 100%;
-              @include clearfix;
+            @include clearfix;
+
             &:after {
               content: '';
               position: absolute;
@@ -41,7 +73,7 @@
               border-bottom: 10px solid #e8e8e8;
             }
           }
-          $nested: '#FFFFFF','#0A4958','#F6E7D2';
+
           @for $i from 2 through 3 {
             .sub[deep='#{$i}'] {
               left: -100%;
@@ -50,8 +82,7 @@
               width: 100%;
               background-color: unquote(nth($nested,$i));
               padding: 15px 0;
-              z-index:$i;
-
+              z-index: $i;
 
               &:after {
                 content: '';
@@ -89,28 +120,6 @@
     overflow: hidden;
     will-change: height;
     max-height: 0;
-    @keyframes anim {
-      from {
-        max-height: 0;
-        height: auto;
-      }
-
-      to {
-        max-height: 900px;
-        height: auto;
-      }
-    }
-    @keyframes reverse-anim {
-      from {
-        max-height: 900px;
-        height: auto;
-      }
-
-      to {
-        max-height: 0;
-        height: auto;
-      }
-    }
 
     &.show {
       display: block;
@@ -139,11 +148,10 @@
 .sub {
   display: none;
 }
-.sub{
-  @include clearfix;
+
+.sub {
+  //@include clearfix;
 }
-
-
 
 .container[deep='0'],
 .item {
@@ -155,32 +163,58 @@
 }
 
 
-@include media ('zerro','md-tablet') {
-.pc {
+
+@include media ('zerro','md-tablet') {.pc {
   display: none;
 }
 
 .mobile {
   display: block;
+  background-color: unquote(nth($nested,1));
 }
-
+.item{
+  @include linkReset{
+    text-decoration: none;
+    color:black;
+  }
+}
 .container[deep] {
   position: relative;
 
 
-
+  & > .sub {
+    height: 0;
+    max-height: 0;
+    overflow: hidden;
+    display: none;
+    padding-left: 30px;
+  }
+  .sub[deep='1']{
+    background-color: unquote(nth($nested,2));
+  }
+  @for $i from 2 through 4 {
+    .sub[deep='#{$i}'] {
+      background-color: unquote(nth($nested,$i+1));
+    }
+  }
 
   &.show {
     & > .sub {
       display: block;
+      animation-name: anim;
+      animation-delay: 0.1s;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
     }
   }
 
   &.hide {
     & > .sub {
-      display: none;
+      display: block;
+      animation-name: reverse-anim;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
     }
   }
 }
-
 }
