--- a/src/components/navigation/logo/logo.scss
+++ b/src/components/navigation/logo/logo.scss
@@ -3,10 +3,14 @@
   float: left;
   border: 2px solid white;
   color: transparent;
+
 @include navigation-height-fix;
+font-size:0;
 
   img{
     float:left;
+    width:100%;
+    max-width:100px;
   }
 }
 .point{
