--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -6,6 +6,11 @@
   padding-top: 70px;
   font-size: 0;
   margin: 0 auto;
+  &.stick{
+    padding:0;
+    position:fixed;
+    background-color:black;
+  }
 }
 .content {
   min-height: 30px;
