work with themes

--- a/src/components/themes/themes.scss
+++ b/src/components/themes/themes.scss
@@ -1,79 +1,119 @@
 
-@function item-top($index,$height){
-  @if $index > 5{
-    @return $height ;
-  }@else{
-    @return 0;
-  }
-}
 
-
-.themes{
-  border:1px solid black;
+$height:200px ;
+.themes {
+  border: 1px solid black;
   @include clearfix;
-  position:relative;
-  height:300px;
+  position: relative;
+  background-color: white;
+  height:$height * 2;
 }
-
-
-@mixin coordinates ($rows,$cells){
-  $index: '0','20%','40%','60%','80%';
-  $list: ();
-  @for $i from 1 through $rows{
-   @for $j from 1 through $cells {
-     $tmp: $i,$j;
-
-     $list: join($list,$tmp,space);
-   }
+@keyframes anim {
+  0% {
+    border: 10px solid white;
   }
-@debug 'tmp' $list;
-  @for $x from 1 through 10 {
-   &.item-#{$x} {
-     transition: all 1s ease;
-     $increment: $x * 2;
-     transform: scale(1);
-      top:   item-top($x,100px);
-     left: unquote(nth($index,nth($list,$increment)));
-   }
+
+  100% {
+    border: 0 solid white;
   }
 }
-.cell{
-  width:20%;
-  height:100px;
-  border:1px solid black;
-  position:absolute;
-@include coordinates(2,5);
-}
+$blue:#00ccff;
+.cell {
+  width: 20%;
+  height:$height ;
+  position: absolute;
+  @include coordinates(2,5,$height,10);
+  transition: all 1s ease;
+  overflow:hidden;
+  transform:translateZ(0);
+  will-change:transform;
 
-
-
-
-
-
-
-
-
-
-
-@mixin coord {
-  $height: 0;
-  @for $x from 1 through 10 {
-    .item-#{$x} {
-      @if $x > 1 {
-        $height: $height + 100;
-      }
-      left: 0;
-      top: unquote($height+'px');
-      width:100%;
+  &:hover{
+    .mask{
+      opacity:0.8;
     }
+    .glass{
+           transform:translateY(100%);
+    }
+   .child{
+     transform:rotate(-3.5deg) translateY(-50%);
+   }
   }
-};
-@include media('zerro','sm-phone'){
-  @include coord;
 }
-@include media('sm-phone','lg-phone'){
-  .cell{
+.child{
+  width:200%;
+  height:200px;
+  position:relative;
+  left:-50%;
+  will-change:transform;
+  transform:rotate(-3.5deg) translateY(10px);
+  transition:transform 0.2s ease-in;
+  background-color:$blue;
+  text-align:center;
+  color:white;
+  padding-top:20px;
+  span{
+    display:inline-block;
+    margin-left:20px;
+    &:nth-child(2){
+      &:hover{
+        display:none;
+        &+span{
+          display:inline-block;
+        }
+      }
+    }
+    &:nth-child(3){
+      display:none;
+    }
 
-  @include coordinates(3,4);
+  }
+}
+.glass{
+  position:absolute;
+  width:100%;
+  color:white;
+  will-change:transform;
+  text-align:center;
+  transition:transform 0.2s ease;
+  transform:translateY(-35px);
+  z-index:100;
+}
+.mask{
+  width:100%;
+  height:100%;
+  background-color:black;
+  opacity:0;
+  transition:opacity 0.5s ease;
+  will-change:opacity;
+
+}
+
+@include media('zerro','sm-phone'){
+  .themes{
+    height:$height * 10;
+  }
+  .cell{
+  @include coordinates(10,1,$height,10);
+  }
+}
+
+@include media('sm-phone','lg-phone'){
+  .themes{
+    height:$height * 5;
+  }
+  .cell{
+  @include coordinates(5,2,$height,10);
+  }
+}
+
+@include media('lg-phone','sm-tablet'){
+  .cell{
+    @include coordinates(4,3,$height,10)
+  }
+}
+@include media('sm-tablet','md-tablet'){
+  .cell{
+    @include coordinates(3,4,$height,10)
   }
 }
