--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -43,3 +43,37 @@ $breakpoints:(
     }
   }
 }
+
+
+@mixin coordinates ($rows,$cells,$height,$quantity){
+  $left :('0');
+  $koef:100 / $cells;
+  @for $i from 1 through ($cells - 1){
+    $tmp:$koef * $i +'%';
+    $left: join($left,$tmp);
+  }
+  $coordinates: ();
+  @for $i from 1 through $rows{
+   @for $j from 1 through $cells {
+     $tmp: $i,$j;
+     $coordinates: join($coordinates,$tmp,space);
+   }
+  }
+$top:0;
+  @for $x from 1 through $quantity {
+   &.item-#{$x} {
+     transition: all 1s ease;
+     $increment: $x * 2;
+
+     @if (($x - 1) % $cells ==0) and ($x > 1) {
+       $top:$top + 1;
+     }
+     background-image: url('./img/#{$x}.jpg');
+     background-position: 50% 50%;
+     background-size: cover;
+     transform:translateY($height * $top);
+     width:100% / $cells;
+     left: unquote(nth($left,nth($coordinates,$increment)));
+   }
+  }
+}
