--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -44,8 +44,10 @@ $max-width: 900px;
     opacity: 0;
     transition: opacity 0.6s ease-in-out;
     position: absolute;
+    z-index:2;
     background-position: 50% 50%;
     background-size: cover;
+    transform:translateZ(0);
     @for $i from 1 through 3 {
       &.x-#{$i} {
         background-image: url('./img/#{$i}.jpg');
@@ -54,6 +56,7 @@ $max-width: 900px;
 
     &.show {
       opacity: 1;
+      z-index:3;
     }
 
     &.fadeOut {
@@ -64,9 +67,10 @@ $max-width: 900px;
 
   .control {
     position: relative;
-    z-index: 2;
+    z-index: 4;
     text-align: center;
     bottom: 6.5vw;
+    transform:translateZ(0);
     &--cell{
       margin:0 5px;
     }
