--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -35,7 +35,26 @@
 
 
 }
+.scrollbar{
+  overflow-y:scroll;
+  max-height:200px;
+  &::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  	border-radius: 10px;
+  	background-color: #F5F5F5;
+    width:8px;
+  }
+  &::-webkit-scrollbar{
+    background-color:transparent;
+    width:8px;
+  }
+  &::-webkit-scrollbar-thumb{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+  border-radius:10px;
 
+  }
+}
 
 
 
