--- a/src/components/navigation/menu/menuitems.scss
+++ b/src/components/navigation/menu/menuitems.scss
@@ -108,7 +108,8 @@ $nested: '#F8B195','#F67280','#C06C84','#6C5B7B','#355C7D' !global;
     z-index: 1;
     border: 1px solid white;
     display: none;
-    height: 0;
+    /*disable-- height:0 --for IE*/
+    //height: 0;
     transform: translateZ(0);
     transition: all 0.1s ease-in-out;
     overflow: hidden;
