--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -46,10 +46,11 @@ $breakpoints:(
 
 
 @mixin coordinates ($rows,$cells,$height,$quantity){
+  @debug 'cells' $cells;
   $left :('0');
   $koef:100 / $cells;
   @for $i from 1 through ($cells - 1){
-    $tmp:$koef * $i +'%';
+    $tmp:(100 * $i)+'%';
     $left: join($left,$tmp);
   }
   $coordinates: ();
@@ -59,10 +60,12 @@ $breakpoints:(
      $coordinates: join($coordinates,$tmp,space);
    }
   }
+
 $top:0;
   @for $x from 1 through $quantity {
    &.item-#{$x} {
-     transition: all 1s ease;  
+     will-change:transform;
+     transition: all 1s ease;
      $increment: $x * 2;
      @if (($x - 1) % $cells ==0) and ($x > 1) {
        $top:$top + 1;
@@ -70,9 +73,8 @@ $top:0;
      background-image: url('./img/#{$x}.jpg');
      background-position: 50% 50%;
      background-size: cover;
-     transform:translateY($height * $top);
+     transform:translate3d(unquote(nth($left,nth($coordinates,$increment))),$height * $top,0);
      width:100% / $cells;
-     left: unquote(nth($left,nth($coordinates,$increment)));
    }
   }
 }
