--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -37,23 +37,16 @@
 }
 .scrollbar{
   overflow-y:scroll;
-  max-height:200px;
-  &::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  	border-radius: 10px;
-  	background-color: #F5F5F5;
-    width:8px;
-  }
+  max-height:calc(100vh - 70px);
   &::-webkit-scrollbar{
-    background-color:transparent;
-    width:8px;
+    width: 12px;
+	background-color: #F5F5F5;
+  &-thumb{
+    border-radius:10px;
+    background-color:#555;
   }
-  &::-webkit-scrollbar-thumb{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
-  border-radius:10px;
+  }
 
-  }
 }
 
 
