--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,16 @@
 @import './style/reset.scss';
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+html{
+  max-width:100%;
+  overflow-x: hidden;
 }
-body{height:10000px;}
+ body {
+      height:10000px;
+}
+
+.block{
+  overflow:hidden;
+  color:red;
+}
 .test{
   position:absolute;
   width:100px;
