--- a/src/components/global/skew.scss
+++ b/src/components/global/skew.scss
@@ -2,7 +2,7 @@
 .skew {
   position: relative;
   height: 0;
-  z-index:10;  
+
 }
 
 .rotate {
@@ -16,3 +16,10 @@
     background-color: white;
     transform-origin:top;
   }
+
+.zindex-0{
+z-index:0;
+}
+.zindex-10{
+z-index:10;  
+}
