--- a/src/components/iconbox/icon.scss
+++ b/src/components/iconbox/icon.scss
@@ -1,12 +1,27 @@
 .circle {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  border: 1px solid black;
-  margin: 0 auto;
   text-align: center;
   line-height:100px;
   span{
     vertical-align:middle;
   }
+}
+.big{
+  width:100px;
+  height:100px;
+  border-radius:50px;
+  line-height:100px;
+}
+.middle{
+  width:75px;
+  height:75px;
+  border-radius:40px;
+    line-height:75px;
+}
+.black{
+    border: 1px solid black;
+    color:black;
+}
+.white{
+    border: 1px solid white;
+    color:white;
 }
