--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -1,19 +1,67 @@
-.results{
-  color:red;
-  border:1px solid red;
-  height:500px;
-  padding-top:100px;
-  background-image:url('./img/home.jpg');
-  background-position:50% 50%;
-  background-size:cover;
+.results {
+  color: red;
+  border: 1px solid red;
+
+  padding: 100px 0;
+  background-image: url('./img/home.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
 }
 
-.row{
-  width:100%;
+.row {
+  width: 100%;
   @include clearfix;
+  color: white;
+  text-align: center;
 }
-.cell{
-  width:33.3333%;
-  float:left;
-    border:1px solid white;
+
+.cell {
+  width: 33.3333%;
+  float: left;
+  border: 1px solid white;
+  padding: 20px;
+  position:relative;
+  overflow:hidden;
+}
+
+.content {
+  float: left;
+}
+.icon{
+  position:absolute;
+}
+
+.content {
+  padding-left: 90px;
+    right:0;
+}
+
+.timer {
+  font-size: 37px;
+}
+
+.header {
+  font-size: 22px;
+}
+.text{
+  line-height:22px;
+  font-size:13px;
+  text-align:center;
+}
+
+@include media ('zerro','sm-tablet') {
+  .cell {
+    width: 100%;
+  }
+  .content{
+    p{
+      text-align:left;
+    }
+  }
+}
+@include media ('sm-tablet','md-tablet') {
+  .cell {
+    padding:20px 0;
+  }
+
 }
