--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -18,7 +18,7 @@
 .cell {
   width: 33.3333%;
   float: left;
-  border: 1px solid white;
+//  border: 1px solid white;
   padding: 20px;
   position:relative;
   overflow:hidden;
