--- a/src/components/global/Button/button.scss
+++ b/src/components/global/Button/button.scss
@@ -9,6 +9,8 @@
   border-radius:9px;
   cursor:pointer;
   transition:all 0.5s ease;
+  display:inline-block;
+  margin:10px;
 
 }
 
@@ -16,6 +18,7 @@
     background-color:transparent;
     &:hover{
       background-color:#00ccff;
+      border-color:#00ccff;
     }
 }
 .filled{
