--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -78,3 +78,21 @@ $top:0;
    }
   }
 }
+/**
+ * Circle animated diagram
+ * $percentage {[SASS list]} list of percentages, example: (50,98,26);
+ * $circle-radius {[integer]} SVG circle radius
+ */
+@mixin diagram($percentage,$circle-radius){
+  $circle-length:(2 * 3.14) * $circle-radius;
+  @for $i from 1 through 3{
+    $index:($circle-length / 100) * (nth($percentage,$i));
+    @debug 'index' 2.333 * 6.455;
+    @keyframes fillup-#{$i}{
+      to {stroke-dasharray:$index $circle-length; }
+    }
+    .item-#{$i}{
+      animation: fillup-#{$i} 2s  forwards;
+    }
+  }
+}
