--- a/src/components/diagram/diagram.scss
+++ b/src/components/diagram/diagram.scss
@@ -26,7 +26,12 @@ circle {
   fill: yellowgreen;
   stroke: #655;
   stroke-width: 10;
-  stroke-dasharray: 0 289; /* 2π × 25 ≈ 158 */
+  /*
+Explicitly without IE because IE does not support stroke-dash-array animations
+   */
+  -webkit-stroke-dasharray: 0 289;
+  -o-stroke-dasharray: 0 289;
+  -moz-stroke-dasharray: 0 289;
 }
 svg {
   transform: rotate(-90deg);
@@ -35,3 +40,67 @@ svg {
 }
 
 @include diagram((66,82,41), 46);
+
+
+
+
+
+
+
+
+
+.pie {
+  width: 100px; height: 100px;
+  border-radius: 50%;
+  background: yellowgreen;
+  background-image:
+  linear-gradient(to right, transparent 50%, #655 0);
+  position:relative;
+  &::after{
+    content:'45%';
+    position:absolute;
+    width:100%;
+    height:100%;
+    text-align:center;
+    line-height:100px;
+    transform:scale(0.9);
+    border-radius:50px;
+    border:1px solid red;
+    top:0;
+
+  }
+}
+
+@keyframes spin {
+  to { transform: rotate(0.5turn); }
+}
+
+@keyframes bg {
+  50% {
+    background: #655;
+   }
+
+ 100%{ background-color: #655;}
+}
+
+.pie::before {
+
+  content: '';
+  display: block;
+  margin-left: 50%;
+  height: 100%;
+  border-radius: 0 100% 100% 0 / 50%;
+  background-color: inherit;
+  transform-origin: left;
+  /*
+  animation-name: spin,bg;
+  animation-duration: 3s,6s;
+  animation-timing-function: linear, step-end;
+  animation-fill-mode: forwards,forwards;
+*/ animation: spin 3s linear 2,
+             bg 6s step-end 1;
+             animation-fill-mode: forwards,forwards;
+
+
+
+}
