--- a/src/components/diagram/diagram.scss
+++ b/src/components/diagram/diagram.scss
@@ -3,104 +3,97 @@
   height: 300px;
   background-color: white;
   padding: 100px;
-
 }
-.circle{
-  position:relative;
-  display:inline-block;
-  &::after{
-    content:attr(per);
-    position:absolute;
-    color:black;
-    left:0;
-    line-height:92px;
-    text-align:center;
-    width:100%;
-    height:100%;
-    border:1px solid red;
+
+.circle {
+  position: relative;
+  display: inline-block;
+
+  &::after {
+    content: attr(per);
+    position: absolute;
+    color: black;
+    left: 0;
+    line-height: 92px;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid red;
   }
 }
-
-circle {
-  position:relative;
-  fill: yellowgreen;
-  stroke: #655;
-  stroke-width: 10;
-  /*
-Explicitly without IE because IE does not support stroke-dash-array animations
-   */
-  -webkit-stroke-dasharray: 0 289;
-  -o-stroke-dasharray: 0 289;
-  -moz-stroke-dasharray: 0 289;
+@function PercentToDegree($percent) {
+   @if $percent <=50{
+    @return unquote(((360/100) * $percent)+'deg');
+  }
+  @else {
+     @return unquote( '180deg');
+  }
 }
-svg {
-  transform: rotate(-90deg);
-  background: yellowgreen;
-  border-radius: 50%;
+@function left($percent) {
+   @if ($percent <= 50){
+    @return 0;
+  }
+  @else {
+     @return $percent - 50;
+  }
 }
+@mixin circleDiagram($percent) {
+   @keyframes right{
+    to {
+      transform: rotate(PercentToDegree($percent));
+    }
+  }
+  @keyframes left {
+    0% {
+      opacity: 1;
+    }
 
-@include diagram((66,82,41), 46);
+    50% {
+      opacity: 1;
+    }
 
-
-
-
-
-
-
-
-
+    100% {
+      transform: rotate(PercentToDegree(left($percent)));
+      opacity: 1;
+    }
+  }
+}
+@include circleDiagram(78);
 .pie {
-  width: 100px; height: 100px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background: yellowgreen;
-  background-image:
-  linear-gradient(to right, transparent 50%, #655 0);
-  position:relative;
-  &::after{
-    content:'45%';
-    position:absolute;
-    width:100%;
-    height:100%;
-    text-align:center;
-    line-height:100px;
-    transform:scale(0.9);
-    border-radius:50px;
-    border:1px solid red;
-    top:0;
+  background-image: linear-gradient(to right, transparent 50%, #655 0);
+  position: relative;
 
+  &::after {
+    content: '';
+    display: block;
+    margin-left: 50%;
+    height: 100%;
+    border-radius: 0 100% 100% 0 / 50%;
+    background-color: #655;
+    transform-origin: left;
+    position: relative;
+    top: -100px;
+    opacity: 0;
+    transform-origin: left;
+    animation: left 1s linear 1;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
   }
-}
 
-@keyframes spin {
-  to { transform: rotate(0.5turn); }
-}
-
-@keyframes bg {
-  50% {
-    background: #655;
-   }
-
- 100%{ background-color: #655;}
-}
-
-.pie::before {
-
-  content: '';
-  display: block;
-  margin-left: 50%;
-  height: 100%;
-  border-radius: 0 100% 100% 0 / 50%;
-  background-color: inherit;
-  transform-origin: left;
-  /*
-  animation-name: spin,bg;
-  animation-duration: 3s,6s;
-  animation-timing-function: linear, step-end;
-  animation-fill-mode: forwards,forwards;
-*/ animation: spin 3s linear 2,
-             bg 6s step-end 1;
-             animation-fill-mode: forwards,forwards;
-
-
-
+  &::before {
+    content: '';
+    display: block;
+    margin-left: 50%;
+    height: 100%;
+    border-radius: 0 100% 100% 0 / 50%;
+    background-color: inherit;
+    transform-origin: left;
+    animation: right 3s linear 1;
+    animation-fill-mode: forwards;
+    animation-delay: inherit;
+  }
 }
