--- a/src/components/diagram/diagram.scss
+++ b/src/components/diagram/diagram.scss
@@ -3,7 +3,7 @@ $side: 90px;
 @debug 'calculator' $side - 1px;
 
 .diagram {
-  border: 1px solid red;
+//  border: 1px solid red;
   //height: 800px;
   background-color: white;
   text-align: center;
