--- a/src/components/themes/themes.scss
+++ b/src/components/themes/themes.scss
@@ -2,7 +2,7 @@
 
 $height:200px ;
 .themes {
-  border: 1px solid black;
+  //border: 1px solid black;
   @include clearfix;
   position: relative;
   background-color: white;
