--- a/src/components/global/Wrapper/wrapper.scss
+++ b/src/components/global/Wrapper/wrapper.scss
@@ -5,7 +5,7 @@
   @include clearfix;
   max-width:1200px;
   min-width:320px;
-  border:1px solid red;
+  //border:1px solid red;
   position:relative;
 }
 
