--- a/src/components/global/skew.scss
+++ b/src/components/global/skew.scss
@@ -8,7 +8,7 @@
 .rotate {
     width: 110%;
     transform: rotate(-3.5deg);
-    border: 1px solid red;
+    //border: 1px solid red;
     height: 6.45vw;
     top:-3.4vw;
     position: absolute;
