--- a/src/components/navigation/logo/logo.scss
+++ b/src/components/navigation/logo/logo.scss
@@ -1,7 +1,7 @@
 .logo {
   width: 40%;
   float: left;
-  border: 2px solid white;
+//  border: 2px solid white;
   color: transparent;
 
 @include navigation-height-fix;
