--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -1,6 +1,6 @@
 .results {
   color: red;
-  border: 1px solid red;
+  //border: 1px solid red;
 
   padding: 100px 0;
   background-image: url('./img/home.jpg');
@@ -15,54 +15,10 @@
   text-align: center;
 }
 
-.cell {
-  width: 33.3333%;
-  float: left;
-//  border: 1px solid white;
-  padding: 20px;
-  position:relative;
-  overflow:hidden;
-}
 
-.content {
-  float: left;
-}
-.icon{
-  position:absolute;
-}
-
-.content {
-  padding-left: 90px;
-    right:0;
-}
-
-.timer {
-  font-size: 37px;
-}
-
-.header {
-  font-size: 22px;
-}
 .text{
   line-height:22px;
   font-size:13px;
   text-align:center;
   margin:20px 0;
-}
-
-@include media ('zerro','sm-tablet') {
-  .cell {
-    width: 100%;
-  }
-  .content{
-    p{
-      text-align:left;
-    }
-  }
-}
-@include media ('sm-tablet','md-tablet') {
-  .cell {
-    padding:20px 0;
-  }
-
 }
