--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@ html{
  body {
       height:10000px;
       font-family:"Open Sans";
-      overflow-x:hidden;
+    //  overflow-x:hidden;
 }
 
 .block{
