--- a/src/components/weare/hover/hover.scss
+++ b/src/components/weare/hover/hover.scss
@@ -1,8 +1,14 @@
 $blue: #00ccff;
 $height: 200px;
-
+.img{
+  //position:absolute;
+  width:100%;
+  height:auto;
+  float:left;
+  position:relative;
+  z-index:0;
+}
 .cell {
-  height: $height;
   position: relative;
   overflow: hidden;
   background-position: 50% 50%;
@@ -22,13 +28,6 @@ $height: 200px;
     }
   }
 }
-@for $i from 1 through 4 {
-  .item-#{$i} {
-    background-image: url('../img/#{$i}.jpg');
-    width: 100%;
-  }
-}
-
 .icons {
   display: inline-block;
   padding-top: 30px;
@@ -62,6 +61,7 @@ $height: 200px;
   transition: all 0.5s ease;
   text-align: center;
   color: white;
+  z-index:2;
 
   span {
     position: relative;
@@ -72,7 +72,7 @@ $height: 200px;
   &::after {
     content: '';
     width: 200%;
-    height: 200px;
+    height: 120%;
     position: absolute;
     left: -50%;
     will-change: transform;
@@ -90,4 +90,21 @@ $height: 200px;
   background-color: black;
   opacity: 0;
   transition: all 0.5s ease;
+  position:absolute;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  z-index:1;
+}
+@include media('zerro','sm-tablet'){
+  .top{
+    a{
+      span{
+        font-size:1.5em;
+      }
+
+    }
+  }
+
 }
