--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -1,28 +1,49 @@
 .blog {
-  border: 1px solid black;
   padding: 3vw 0;
 }
-.img{
-  width:50%;
-  float:left;
-  border:1px solid black;
-    max-width: 560px;
-    font-size:0;
 
+.img {
+  width: 50%;
+  float: left;
+  max-width: 560px;
+  font-size: 0;
+  font-size: 1em;
+  padding: 20px;
 }
-.text{
-  width:50%;
-  float:left;
-  border:1px solid black;
+
+.text {
+  width: 50%;
+  float: left;
   font-size: 13px;
-    line-height: 22px;
-    color: #666666;
-    padding:0 10px;
+  line-height: 22px;
+  color: #666666;
+  padding: 0 10px;
 }
+
+.title {
+  line-height: 28px;
+  margin-bottom: 5px;
+  font-size: 22px;
+  color: #2f2f2f;
+  transition: color 1s ease;
+
+  &:hover {
+    color: #00ccff;
+  }
+}
+
+.info {
+  color: #666666;
+}
+
+.main {
+  margin: 20px 0;
+}
+
 .content {
   width: 100%;
-  margin:20px 0;
-
+  margin: 20px 0;
+  border-bottom: 1px solid #e3e3e3;
   @include clearfix;
 
   span {
@@ -30,4 +51,11 @@
       color: white;
     }
   }
+}
+
+@include media('zerro','sm-tablet'){
+  .img,.text{
+    width:100%;
+  }
+
 }
