--- a/src/components/global/Skew/skew.scss
+++ b/src/components/global/Skew/skew.scss
@@ -1,19 +1,21 @@
 .skew {
   position: relative;
   height: 0;
+
 }
 
 .rotate {
-  width: 110%;
+  width: 100vw;
   transform: rotate(-3.5deg);
   //border: 1px solid red;
   height: 6.45vw;
   top: -3.4vw;
   position: absolute;
-  left: -5%;
+  //left: -5%;
   background-color: white;
   transform-origin: top;
-  border: 1px solid red;
+  //border:1px solid black;
+    //overflow-x:hidden;
 }
 
 .zindex-0 {
