--- a/src/components/iconbox/icon.scss
+++ b/src/components/iconbox/icon.scss
@@ -1,6 +1,9 @@
 .circle {
   text-align: center;
   line-height:100px;
+  transition:all 1s ease;
+  background-color:transparent;
+  border-color:transparent;
   span{
     vertical-align:middle;
   }
@@ -16,6 +19,12 @@
   height:75px;
   border-radius:40px;
     line-height:75px;
+}
+.small{
+  width:55px;
+  height:55px;
+  border-radius:30px;
+    line-height:55px;
 }
 
 .black{
