--- a/src/style.scss
+++ b/src/style.scss
@@ -1,22 +1,31 @@
 @import './style/reset.scss';
-html{
-  max-width:100%;
+
+html {
+  max-width: 100%;
   overflow-x: hidden;
 }
- body {
-      height:10000px;
-      font-family:"Open Sans";
-    //  overflow-x:hidden;
+
+body {
+  font-family: "Open Sans";
+overflow:hidden;
 }
 
-.block{
-  overflow:hidden;
-  color:red;
+.block {
+  overflow: hidden;
+  color: red;
 }
-.test{
-  position:absolute;
-  width:100px;
-  height:100px;
-  color:red;
-  font-size:16px;
+
+.test {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  color: red;
+  font-size: 16px;
+}
+
+
+@include media ('zerro','sm-phone') {
+  body {
+    //overflow-x: hidden;
+  }
 }
