--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,15 +1,57 @@
-.contact{
-  border:1px solid black;
-  height:500px;
+.contact {
+  padding-bottom:6.45vw;
   @include clearfix;
+  padding-top: 3vw;
 }
-.message{
-  float:left;
-  width:65%;
-  border:1px solid black;
+
+.message {
+  float: left;
+  width: 66.6666%;
 }
-.info{
-  float:left;
-  width:25%;
-  border:1px solid black;
+
+.info {
+  float: left;
+  width: 33.3333%;
+  padding-left:20px;
+}
+
+.title {
+  font-size: 22px;
+  line-height: 28px;
+  margin-bottom:18px;
+}
+
+.sub {
+  font-size: 13px;
+  margin-bottom: 22px;
+  color: #666666;
+}
+.list{
+  height:auto;
+}
+.cell{
+  margin-bottom:5px;
+  padding-top:10px;
+  position:relative;
+  padding-left:30px;
+  & :first-child{
+    position:absolute;
+    left:0;
+    top:13px;
+  }
+}
+.text{
+  font-size: 13px;
+    line-height: 22px;
+    color: #666666;
+}
+
+@include media('zerro','sm-tablet'){
+  .message{
+    width:100%;
+  }
+  .info{
+    margin-top:20px;
+    width:100%;
+  }
 }
