--- a/src/components/contact/form/input/input.scss
+++ b/src/components/contact/form/input/input.scss
@@ -1,4 +1,4 @@
-input, textarea{
+.contact{
   width:100%;
   background-color:#e3e3e3;
   border:none;
@@ -8,8 +8,52 @@ input, textarea{
   line-height:22px;
   font-family: "Open Sans";
   font-weight:400;
+  resize:none;
 }
-.field{
+.text,.email,.submit{
   width:100%;
   margin:3px 0;
+  display:inline-block;
+}
+.submit{
+  input[type='submit']{
+    &.subscribe{
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      position:absolute;
+      top:3px;
+      right:0;
+      background-color:white;
+      color:#2f2f2f;
+      &:hover{
+        color:white;
+      }
+
+    }
+    width:120px;
+    background-color:#2f2f2f;
+    color:white;
+    transition:all 0.7s ease;
+    &:hover{
+      background-color:#00ccff;
+    }
+  }
+
+}
+.input{
+  color:black;
+}
+
+.subscribe{
+  background-color:transparent;
+  font-size:13px;
+  padding:8px 17px 10px 17px;
+  border-radius:4px;
+  line-height:22px;
+  font-family: "Open Sans";
+  font-weight:400;
+  border:1px solid white;
+  color:white;
+  width:100%;
+
 }
